<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_edit_information">Edit Information</string>
    <string name="title_activity_show_information">Show Information</string>
    <string name="app_name">Badge And Sensor</string>
    <string name="delete_location_save">Delete Location Information</string>
    <string name="hello_world">Change Me, Supid!</string>
    <string name="take_photo">Take</string>
    <string name="choose_photo">Choose</string>
    <string name="saveInformation">Save</string>
    <string name="cancelSaveInformation">Cancel</string>
    <string name="saved_changes">Successfully Saved Changes!</string>
    <string name="hintNameField">Name</string>
    <string name="hintPostalField">Address</string>
    <string name="hintExtraInfo">Extra Information</string>
    <string name="undefinedField">(None Specified)</string>
    <string name="testing">Testing Button</string>
    <string name="image_filename">user_img.jpg</string>
    <string name="user_info_filename">user_info.json</string>
    <string name="select_photo_dialog_title">Set Photo</string>
    <string name="image_view_description"></string>

    <string-array name="select_photo_location">
        <item>Take New Photo</item>
        <item>Choose Existing Photo</item>
    </string-array>

    <color name="white">#FFFFFF</color>

</resources>
