<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditInformationActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin" >
        
				    <QuickContactBadge
				        android:id="@+id/contactBadge"
				        android:layout_width="200dip"
					      android:layout_height="260dip"
					      android:layout_gravity="center_horizontal"
					      android:layout_marginTop="4dp"
					      android:background="@color/white"
					      android:padding="8dp" />
				
				    <TextView
				        android:id="@+id/editNameLabel"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:paddingTop="16dp"
				        android:ems="10"
				        android:text="@string/hintNameField"
				        android:textAppearance="?android:attr/textAppearanceSmall" />
				    
				    <EditText
				        android:id="@+id/nameField"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:paddingTop="16dp"
				        android:ems="10"
				        android:hint="@string/hintNameField"
				        android:inputType="textPersonName" />
				    
				    <TextView
				        android:id="@+id/editPostalLabel"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:paddingTop="16dp"
				        android:ems="10"
				        android:text="@string/hintPostalField"
				        android:textAppearance="?android:attr/textAppearanceSmall" />
				
				    <EditText
				        android:id="@+id/postalField"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/hintPostalField"
				        android:ems="10"
				        android:inputType="textMultiLine" />
				    
				    <TextView
				        android:id="@+id/showExtraInfoLabel"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:paddingTop="16dp"
				        android:ems="10"
				        android:text="@string/hintExtraInfo"
				        android:textAppearance="?android:attr/textAppearanceSmall" />
				
				    <EditText
				        android:id="@+id/extraInfo"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:ems="10"
				        android:hint="@string/hintExtraInfo"
				        android:inputType="textMultiLine" />
    
    </LinearLayout>

</ScrollView>